--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "mongoose": "^6.1.7",
+    "nodemon": "^2.0.15",
     "path": "^0.12.7"
   }
 }
