--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "keys-to-password": "^1.2.0",
+    "keys-to-password": "^1.2.1",
     "mongoose": "^6.1.7",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
