Fix bugs to Deploy to heroku

--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanielShamir93/1K4A-Passwords--full-stack.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DanielShamir93/1K4A-Passwords--full-stack/issues"
+  },
+  "homepage": "https://github.com/DanielShamir93/1K4A-Passwords--full-stack#readme",
   "dependencies": {
     "axios": "^0.25.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^14.2.0",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "keys-to-password": "^1.2.1",
-    "mongoose": "^6.1.7",
+    "mongoose": "^6.1.8",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
     "validator": "^13.7.0"
